--- a/config/packages/nucleos_user.yaml
+++ b/config/packages/nucleos_user.yaml
@@ -1,9 +1,9 @@
 nucleos_user:
-    firewall_name: main
-
-    from_email: '%env(MAIL_SENDER)%'
-
-    user_class: 'App\Entity\User\User'
-
-    group:
-        group_class: 'App\Entity\User\Group'
+    db_driver: orm
+    firewall_name: web
+    user_class: AppBundle\Entity\User
+    service:
+        user_manager: coopcycle.user_manager
+    from_email: "%transactional_sender_name% <%transactional_address%>"
+    loggedin:
+        route: homepage
