--- a/config/routes/nucleos_user.yaml
+++ b/config/routes/nucleos_user.yaml
@@ -1,2 +1,13 @@
 nucleos_user:
     resource: "@NucleosUserBundle/Resources/config/routing/all.xml"
+
+nucleos_user_security:
+    resource: "@NucleosUserBundle/Resources/config/routing/security.php"
+
+nucleos_user_resetting:
+    resource: "@NucleosUserBundle/Resources/config/routing/resetting.php"
+    prefix: /resetting
+
+nucleos_user_change_password:
+    resource: "@NucleosUserBundle/Resources/config/routing/change_password.php"
+    prefix: /security
