--- a/config/services/twig.yml
+++ b/config/services/twig.yml
@@ -5,7 +5,7 @@ services:
     autoconfigure: true
 
   AppBundle\Twig\:
-    resource: '../../../src/Twig/*'
+    resource: '../../src/Twig/*'
 
   AppBundle\Twig\AppearanceRuntime:
     arguments:
