--- a/config/packages/doctrine_migrations.yaml
+++ b/config/packages/doctrine_migrations.yaml
@@ -1,6 +1,9 @@
+# https://github.com/doctrine/DoctrineMigrationsBundle/issues/305
 doctrine_migrations:
     migrations_paths:
-        # namespace is arbitrary but should be different from App\Migrations
-        # as migrations classes should NOT be autoloaded
-        'DoctrineMigrations': '%kernel.project_dir%/migrations'
-    enable_profiler: false
+        'Application\Migrations': '%kernel.project_dir%/app/DoctrineMigrations'
+    storage:
+        table_storage:
+            table_name: migration_versions
+            version_column_name: version
+            executed_at_column_name: executed_at
