--- a/config/packages/snc_redis.yaml
+++ b/config/packages/snc_redis.yaml
@@ -1,12 +1,23 @@
 snc_redis:
     clients:
-
-# Define your clients here. The example below connects to database 0 of the default Redis server.
-#
-# See https://github.com/snc/SncRedisBundle/blob/master/docs/README.md for instructions on
-# how to configure the bundle.
-#
-#        default:
-#            type: phpredis
-#            alias: default
-#            dsn: "%env(REDIS_URL)%"
+        default:
+            type: phpredis
+            alias: default
+            dsn: "%env(COOPCYCLE_REDIS_DSN)%"
+            options:
+                prefix: "%database_name%:"
+        session:
+            type: phpredis
+            alias: session
+            dsn: "%env(COOPCYCLE_REDIS_DSN)%"
+        tile38:
+            type: phpredis
+            alias: tile38
+            dsn: "%env(COOPCYCLE_TILE38_DSN)%"
+            options:
+                # https://github.com/phpredis/phpredis/issues/70#issuecomment-348997806
+                read_write_timeout: -1
+        shared:
+            type: phpredis
+            alias: shared
+            dsn: "%env(COOPCYCLE_REDIS_DSN)%"
