--- a/config/routes/api_platform.yaml
+++ b/config/routes/api_platform.yaml
@@ -1,4 +1,4 @@
-api_platform:
-    resource: .
-    type: api_platform
-    prefix: /api
+api:
+    resource: '.'
+    type:     'api_platform'
+    prefix:   '/api'
