--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "symfony/ux-react": "2.10",
         "symfony/ux-turbo": "^2.10",
         "symfony/stimulus-bundle": "^2.10",
+        "symfony/cache": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "friendsofsymfony/rest-bundle": "^3.0",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
