Split packages, add bundles.

--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -14,3 +14,7 @@ framework:
                 adapters:
                   - cache.adapter.array
                   - cache.app
+            craue_config.cache:
+                adapters:
+                  - cache.adapter.array
+                  - cache.app
