--- a/composer.json
+++ b/composer.json
@@ -172,7 +172,8 @@
         "sensio/framework-extra-bundle": "*",
         "doctrine/dbal": "^3",
         "twig/extra-bundle": "^2.12|^3.0",
-        "symfony/workflow": "5.4.*"
+        "symfony/workflow": "5.4.*",
+        "symfony/lock": "5.4.*"
     },
     "require-dev": {
         "symfony/debug-bundle": "*",
